@@ -1,0 +1,35 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
+
+<html>
+<head>
+  <meta http-equiv="Content-Type" content=
+  "text/html; charset=us-ascii">
+
+  <title>Creating Figures</title>
+  <link rel="stylesheet" type="text/css" href=
+  "../../../styles.css">
+</head>
+
+<body>
+  <h2>Creating Figures</h2>
+
+  <p>Figures can be added to the canvas in one of three ways:</p>
+  <ol>
+  	<li>Clicking on the figure type from the palette, and then
+  	holding down on the mouse while dragging a figure corner on the canvas to specify the size of
+  	the figure.</li>
+  	<li>Double click on the figure type from the palette.</li>
+  	<li>Click on a figure type from the palette and then click somewhere on the canvas.</li>
+  </ol>
+
+  <div class="note">
+  <p>A disadvantage of the first method is that if the figure has compartments and content is added to a compartment,
+  then the figure will not be extended after the content is added. This means that,
+  depending on the size of the figure, the compartment content may not be
+  visible until the parent figure is expanded. Using the second and third methods have the advantage of
+  automatic figure re-sizing to accommodate sub-figures being added.</p>
+   </div> 
+  <p>See <a href="arranging_figures.html">Arranging Figures</a> for more information on auto-sizing.</p>  
+</body>
+</html>
